[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/UI/TitleMenu.gd" type="Script" id=1]

[node name="TitleMenu" type="ColorRect"]
pause_mode = 2
margin_left = -1.0
margin_top = 2.0
margin_right = 488.0
margin_bottom = 270.0
color = Color( 0.0862745, 0.305882, 0.498039, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = 2.0
margin_right = 481.0
margin_bottom = 23.0
text = "SolarPunk Jam Game"
align = 1

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 164.363
margin_top = 84.7725
margin_right = 322.363
margin_bottom = 176.772
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="GameInfo" type="Button" parent="Menu"]
margin_right = 158.0
margin_bottom = 20.0
text = "Game Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 158.0
margin_bottom = 44.0
text = "New Game"

[node name="Options" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 158.0
margin_bottom = 68.0
text = "Options"

[node name="QuitGame" type="Button" parent="Menu"]
margin_top = 72.0
margin_right = 158.0
margin_bottom = 92.0
text = "Quit Game"

[connection signal="pressed" from="Menu/GameInfo" to="." method="_on_GameInfo_pressed"]
[connection signal="pressed" from="Menu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/QuitGame" to="." method="_on_QuitGame_pressed"]
